--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Můj první web</title>
   <link rel="stylesheet" href="stile.css">
 </head>
-  <body>Je mi zima
+  <body>
+   <h1>1234567890</h1>
+   <p>0987654321</p>
   </body>
   </html>
   
